...
                android:visibility="visible"
                app:background="@{``}"
                tools:background="@color/primary"
                tools:text="@string/timesDilution" />

            <TextView
                android:id="@+id/textResult"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:gravity="center_vertical"
                android:textSize="60sp"
...
                    android:layout_weight="1"
                    android:onClick="sendTestResultClick"
                    android:text="@string/sendData"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/buttonAccept"
                    style="@style/Button"
                    android:layout_gravity="center_horizontal"
                    android:onClick="onClickAcceptResult"
                    android:text="@string/acceptResult"
                    android:theme="?primaryButtonStyle" />
            </LinearLayout>
...
